--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
   <title>Portafolio | Jhonier Montaño</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-    <link rel="stylesheet" href="style.css"/>
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <style>
+   
+  </style>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="navbar-brand" href="#">Jhonier Montaño</a>
+      <a class="navbar-brand d-flex align-items-center" href="#">
+        <img src="/images/LogoJH.png" alt="Logo" width="40" height="40" class="me-2">
+        Jhonier Montaño
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,13 +36,16 @@
     <div class="container">
       <h1>¡Hola! Soy Jhonier</h1>
       <p>Desarrollador en formación, enfocado en crear experiencias funcionales y modernas</p>
+      <div data-aos="zoom-in" class="mt-4">
+        <img src="/images/yo" alt="Foto de Jhonier" class="rounded-circle shadow" width="150" height="150">
+      </div>
     </div>
   </section>
 
-  <section id="sobre-mi" class="container">
+  <section id="sobre-mi" class="container" data-aos="fade-up">
     <h2 class="section-title">Sobre mí</h2>
     <p class="text-center">
-      Soy estudiante del SENA con pasión por el desarrollo web. Trabajo con HTML y CSS creando proyectos sencillos pero funcionales y bien diseñados. Me enfoco en seguir aprendiendo y creciendo como profesional.
+      Soy estudiante del SENA con pasión por el desarrollo web. Trabajo con HTML y CSS creando proyectos funcionales y bien diseñados. Me enfoco en seguir aprendiendo y creciendo como profesional.
     </p>
     <div class="text-center skills">
       <i class="fab fa-html5 text-danger"></i>
@@ -47,7 +57,7 @@
     <h2 class="section-title">Proyectos</h2>
     <div class="row justify-content-center">
       <div class="col-md-6">
-        <div class="card p-4">
+        <div class="card p-4" data-aos="flip-left">
           <h4 class="card-title">M&C Grúas</h4>
           <p class="card-text">
             Sitio web profesional diseñado con HTML, CSS y Bootstrap para una empresa de transporte y grúas.
@@ -60,6 +70,9 @@
     </div>
   </section>
 
+ 
+  
+
   <section id="contacto" class="container">
     <h2 class="section-title">Contacto</h2>
     <p class="text-center">¿Te interesa mi trabajo? ¡Conecta conmigo!</p>
@@ -69,27 +82,55 @@
     </div>
   </section>
 
-  <section id="comentarios" class="container">
-    <h2 class="section-title">Deja tu comentario</h2>
-    <div class="comment-box">
-      <form>
-        <div class="mb-3">
-          <label for="nombre" class="form-label">Nombre</label>
-          <input type="text" class="form-control" id="nombre" required>
-        </div>
-        <div class="mb-3">
-          <label for="comentario" class="form-label">Comentario</label>
-          <textarea class="form-control" id="comentario" rows="4" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
-      </form>
+  <section class="container my-5">
+    <h2 class="section-title text-center mb-4">Contáctame</h2>
+    <div class="d-flex justify-content-center align-items-center flex-wrap gap-3">
+      <input type="text" id="correo" class="form-control text-center rounded-3" value="jhonier@email.com" readonly style="max-width: 300px;">
+      <button class="btn btn-outline-primary rounded-3" onclick="copiarCorreo()">
+        Copiar correo
+      </button>
     </div>
   </section>
+
+  <section id="comentarios" class="container my-5">
+    <h2 class="section-title">Deja tu comentario</h2>
+    <div class="row align-items-center">
+      <!-- Formulario estilizado -->
+      <div class="col-md-6 mb-4">
+        <div class="card shadow-lg p-4 rounded-4 border-0">
+          <form>
+            <div class="mb-3">
+              <label for="nombre" class="form-label fw-semibold">Nombre</label>
+              <input type="text" class="form-control rounded-3" id="nombre" placeholder="Ingresa tu nombre" required>
+            </div>
+            <div class="mb-3">
+              <label for="comentario" class="form-label fw-semibold">Comentario</label>
+              <textarea class="form-control rounded-3" id="comentario" rows="5" placeholder="Escribe tu comentario" required></textarea>
+            </div>
+            <div class="text-end">
+              <button type="submit" class="btn btn-primary px-4 py-2 rounded-3">Enviar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+  
+      <!-- Logo -->
+      <div class="col-md-6 text-center">
+        <img src="/images/LogoJH.png" alt="Logo de Jhonier Montaño" class="img-fluid" style="max-width: 320px;" data-aos="zoom-in">
+      </div>
+    </div>
+  </section>
+  
 
   <footer>
     <p class="text-center">&copy; 2025 Jhonier Montaño. Todos los derechos reservados.</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script src="scripts.js"  ></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
