le agregue mas diseño luego continuo

--- a/index.html
+++ b/index.html
@@ -8,29 +8,34 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <style>
-   
-  </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="/images/LogoJH.png" alt="Logo" width="40" height="40" class="me-2">
-        Jhonier Montaño
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#sobre-mi">Sobre mí</a></li>
-          <li class="nav-item"><a class="nav-link" href="#proyectos">Proyectos</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
-        </ul>
-      </div>
+  <!-- Apartado de navegación -->
+<nav class="navbar navbar-expand-lg custom-navbar">
+  <div class="container d-flex justify-content-between align-items-center">
+    <!-- Logo alineado a la izquierda -->
+    <a class="navbar-brand d-flex align-items-center" href="#">
+      <img src="/images/LogoJH.png" alt="Logo" width="40" height="40" class="me-2">
+      <span class="fw-bold text-light">Jhonier Montaño</span>
+    </a>
+
+    <!-- Botón para menú en dispositivos pequeños -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Menú centrado -->
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav gap-3">
+        <li class="nav-item"><a class="nav-link" href="#sobre-mi">Sobre mí</a></li>
+        <li class="nav-item"><a class="nav-link" href="#proyectos">Proyectos</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
+
+<!-- Fin del apartado de navegación -->
 
   <section class="hero">
     <div class="container">
