--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Portafolio | Jhonier Montaño</title>
+  <link rel="icon" href="/images/LogoTrans.png" type="image/png"/>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
@@ -15,7 +17,7 @@
   <div class="container d-flex justify-content-between align-items-center">
     <!-- Logo alineado a la izquierda -->
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="/images/LogoJH.png" alt="Logo" width="40" height="40" class="me-2">
+      <img src="/images/LogoSolo.png" alt="Logo" width="40" height="40" class="me-2">
       <span class="fw-bold text-light">Jhonier Montaño</span>
     </a>
 
@@ -46,11 +48,11 @@
       </div>
     </div>
   </section>
-
+<!-- Apartad-->
   <section id="sobre-mi" class="container" data-aos="fade-up">
     <h2 class="section-title">Sobre mí</h2>
     <p class="text-center">
-      Soy estudiante del SENA con pasión por el desarrollo web. Trabajo con HTML y CSS creando proyectos funcionales y bien diseñados. Me enfoco en seguir aprendiendo y creciendo como profesional.
+      Soy estudiante del SENA, con una fuerte pasión por el desarrollo web. A través de mis estudios y proyectos personales, he logrado adquirir experiencia trabajando principalmente con HTML y CSS, creando sitios web funcionales y con un diseño atractivo. Mi enfoque está en ofrecer soluciones prácticas y modernas, siempre buscando que cada proyecto cumpla con los estándares más altos de calidad y usabilidad. Me esfuerzo por aprender de manera continua, adaptándome a nuevas tecnologías y metodologías para seguir creciendo como profesional en el mundo del desarrollo web.
     </p>
     <div class="text-center skills">
       <i class="fab fa-html5 text-danger"></i>
@@ -67,7 +69,7 @@
           <p class="card-text">
             Sitio web profesional diseñado con HTML, CSS y Bootstrap para una empresa de transporte y grúas.
           </p>
-          <a href="https://github.com/jhoniermc/MYC-Gruas" class="btn btn-dark" target="_blank">
+          <a href="https://github.com/Jhonier1227/MCgruas" class="btn btn-dark" target="_blank">
             <i class="fab fa-github"></i> Ver en GitHub
           </a>
         </div>
@@ -82,15 +84,15 @@
     <h2 class="section-title">Contacto</h2>
     <p class="text-center">¿Te interesa mi trabajo? ¡Conecta conmigo!</p>
     <div class="text-center">
-      <a href="https://github.com/jhoniermc" class="btn btn-outline-dark m-2" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-      <a href="https://linkedin.com/in/jhoniermc" class="btn btn-outline-primary m-2" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+      <a href="https://github.com/Jhonier1227" class="btn btn-outline-dark m-2" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+      <a href="https://www.linkedin.com/in/jhonier-stiven-monta%C3%B1o-castillo-610271346/" class="btn btn-outline-primary m-2" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
     </div>
   </section>
 
   <section class="container my-5">
     <h2 class="section-title text-center mb-4">Contáctame</h2>
     <div class="d-flex justify-content-center align-items-center flex-wrap gap-3">
-      <input type="text" id="correo" class="form-control text-center rounded-3" value="jhonier@email.com" readonly style="max-width: 300px;">
+      <input type="text" id="correo" class="form-control text-center rounded-3" value="jhonierstivenmontanocastillo@gmail.com" readonly style="max-width: 300px;">
       <button class="btn btn-outline-primary rounded-3" onclick="copiarCorreo()">
         Copiar correo
       </button>
