--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
   <!-- CSS personalizado -->
   <link rel="stylesheet" href="style.css">
   <!-- AOS -->
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+ <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
 
 
 </head>
@@ -123,7 +127,7 @@
 
 
 
-<section id="proyectos" class="container my-5">
+<section id="proyectos" class="container my-5 py-5" style="min-height: 100vh;">
   <h2 class="section-title text-center mb-4">Proyectos destacados</h2>
 
   <!-- Contenedor del carrusel -->
@@ -158,74 +162,123 @@
   </div>
 </section>
 
-<section id="habilidades" class="py-5" style="background-color: #121212; color: #fff;">
+<section id="habilidades" class="py-5" style="background: linear-gradient(to bottom right, #121212, #1c1c1c); color: #fff;">
   <div class="container">
     <h2 class="section-title text-center text-white mb-5">Habilidades</h2>
 
-    <!-- Habilidades técnicas -->
+    <!-- Técnicas -->
     <h4 class="text-center mb-4">Técnicas</h4>
     <div class="row justify-content-center text-center mb-5">
 
-      <div class="col-6 col-md-3 mb-4">
+      <!-- HTML -->
+      <div class="col-12 col-md-4 mb-4">
         <i class="fab fa-html5 fa-3x text-danger mb-2"></i>
         <h5 class="fw-bold">HTML5</h5>
+        <div class="progress bg-dark" style="height: 8px;">
+          <div class="progress-bar bg-danger" style="width: 95%;"></div>
+        </div>
+        <small>Avanzado</small>
       </div>
 
-      <div class="col-6 col-md-3 mb-4">
+      <!-- CSS -->
+      <div class="col-12 col-md-4 mb-4">
         <i class="fab fa-css3-alt fa-3x text-primary mb-2"></i>
         <h5 class="fw-bold">CSS3</h5>
+        <div class="progress bg-dark" style="height: 8px;">
+          <div class="progress-bar bg-primary" style="width: 90%;"></div>
+        </div>
+        <small>Avanzado</small>
       </div>
 
-      <div class="col-6 col-md-3 mb-4">
+      <!-- JavaScript -->
+      <div class="col-12 col-md-4 mb-4">
         <i class="fab fa-js-square fa-3x text-warning mb-2"></i>
         <h5 class="fw-bold">JavaScript</h5>
+        <div class="progress bg-dark" style="height: 8px;">
+          <div class="progress-bar bg-warning" style="width: 85%;"></div>
+        </div>
+        <small>Intermedio - Avanzado</small>
       </div>
 
-      <div class="col-6 col-md-3 mb-4">
+      <!-- Bootstrap -->
+      <div class="col-12 col-md-4 mb-4">
         <i class="fab fa-bootstrap fa-3x text-info mb-2"></i>
         <h5 class="fw-bold">Bootstrap</h5>
+        <div class="progress bg-dark" style="height: 8px;">
+          <div class="progress-bar bg-info" style="width: 85%;"></div>
+        </div>
+        <small>Intermedio</small>
       </div>
 
-      <div class="col-6 col-md-3 mb-4">
+      <!-- PHP -->
+      <div class="col-12 col-md-4 mb-4">
         <i class="fab fa-php fa-3x text-secondary mb-2"></i>
         <h5 class="fw-bold">PHP</h5>
+        <div class="progress bg-dark" style="height: 8px;">
+          <div class="progress-bar bg-secondary" style="width: 40%;"></div>
+        </div>
+        <small>Básico - en pausa</small>
       </div>
 
-      <div class="col-6 col-md-3 mb-4">
+      <!-- MySQL -->
+      <div class="col-12 col-md-4 mb-4">
         <i class="fas fa-database fa-3x text-light mb-2"></i>
         <h5 class="fw-bold">MySQL</h5>
+        <div class="progress bg-dark" style="height: 8px;">
+          <div class="progress-bar bg-light text-dark" style="width: 75%;"></div>
+        </div>
+        <small>Intermedio</small>
       </div>
     </div>
 
-    <!-- Habilidades blandas -->
+    <!-- Blandas -->
     <h4 class="text-center mb-4">Blandas</h4>
     <div class="row justify-content-center text-center">
 
-      <div class="col-6 col-md-3 mb-4">
+      <div class="col-12 col-md-4 mb-4">
         <i class="fas fa-users fa-3x text-warning mb-2"></i>
         <h5 class="fw-bold">Trabajo en equipo</h5>
+        <div class="progress bg-dark" style="height: 8px;">
+          <div class="progress-bar bg-warning" style="width: 90%;"></div>
+        </div>
+        <small>Fuerte</small>
       </div>
 
-      <div class="col-6 col-md-3 mb-4">
+      <div class="col-12 col-md-4 mb-4">
         <i class="fas fa-comments fa-3x text-info mb-2"></i>
         <h5 class="fw-bold">Comunicación</h5>
+        <div class="progress bg-dark" style="height: 8px;">
+          <div class="progress-bar bg-info" style="width: 85%;"></div>
+        </div>
+        <small>Muy buena</small>
       </div>
 
-      <div class="col-6 col-md-3 mb-4">
+      <div class="col-12 col-md-4 mb-4">
         <i class="fas fa-lightbulb fa-3x text-success mb-2"></i>
         <h5 class="fw-bold">Resolución de problemas</h5>
+        <div class="progress bg-dark" style="height: 8px;">
+          <div class="progress-bar bg-success" style="width: 88%;"></div>
+        </div>
+        <small>Muy buena</small>
       </div>
 
-      <div class="col-6 col-md-3 mb-4">
+      <div class="col-12 col-md-4 mb-4">
         <i class="fas fa-hourglass-half fa-3x text-danger mb-2"></i>
         <h5 class="fw-bold">Gestión del tiempo</h5>
+        <div class="progress bg-dark" style="height: 8px;">
+          <div class="progress-bar bg-danger" style="width: 80%;"></div>
+        </div>
+        <small>En proceso de mejora</small>
       </div>
 
-      <div class="col-6 col-md-3 mb-4">
+      <div class="col-12 col-md-4 mb-4">
         <i class="fas fa-brain fa-3x text-primary mb-2"></i>
         <h5 class="fw-bold">Pensamiento crítico</h5>
+        <div class="progress bg-dark" style="height: 8px;">
+          <div class="progress-bar bg-primary" style="width: 85%;"></div>
+        </div>
+        <small>Sólido</small>
       </div>
-
     </div>
   </div>
 </section>
@@ -233,50 +286,70 @@
 
 
   <!-- CONTACTO -->
-  <section id="contacto" class="py-5 bg-light">
-    <div class="container">
-      <h2 class="text-center mb-4 section-title">Contacto</h2>
-      <p class="text-center mb-5">¿Tienes un proyecto, idea o simplemente quieres saludar? ¡Estoy disponible para colaborar!</p>
+  <section id="contacto" class="py-5 position-relative" style="background: linear-gradient(to right, #0f0f0f, #1c1c1c); overflow: hidden;">
+    <div class="container position-relative" style="z-index: 2;">
+      <h2 class="text-center mb-4 section-title text-white">Contacto</h2>
+      <p class="text-center text-white-50 mb-5">¿Tienes un proyecto, idea o simplemente quieres saludar? ¡Estoy disponible para colaborar!</p>
   
-      <div class="row">
-        <!-- Columna izquierda: Formulario -->
-        <div class="col-md-6">
-          <form>
-            <div class="mb-3">
-              <label for="nombre" class="form-label">Nombre completo</label>
-              <input type="text" class="form-control" id="nombre" placeholder="Tu nombre">
-            </div>
-            <div class="mb-3">
-              <label for="correo" class="form-label">Correo electrónico</label>
-              <input type="email" class="form-control" id="correo" placeholder="tucorreo@example.com">
-            </div>
-            <div class="mb-3">
-              <label for="asunto" class="form-label">Asunto</label>
-              <input type="text" class="form-control" id="asunto" placeholder="Motivo del mensaje">
-            </div>
-            <div class="mb-3">
-              <label for="mensaje" class="form-label">Mensaje</label>
-              <textarea class="form-control" id="mensaje" rows="5" placeholder="Escribe tu mensaje aquí..."></textarea>
-            </div>
-            <button type="submit" class="btn btn-dark w-100">Enviar mensaje</button>
-          </form>
-        </div>
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <div class="bg-white rounded-4 shadow-lg p-4 p-md-5 animate__animated animate__fadeInUp">
+            <div class="row">
+              <!-- Formulario -->
+              <div class="col-md-6 mb-4 mb-md-0">
+                <form id="formulario-contacto" action="https://formspree.io/f/mrbqqdya" method="POST">
+                  <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre completo</label>
+                    <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Tu nombre" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="correo" class="form-label">Correo electrónico</label>
+                    <input type="email" class="form-control" id="correo" name="correo" placeholder="tucorreo@example.com" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="asunto" class="form-label">Asunto</label>
+                    <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Motivo del mensaje" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="mensaje" class="form-label">Mensaje</label>
+                    <textarea class="form-control" id="mensaje" name="mensaje" rows="5" placeholder="Escribe tu mensaje aquí..." required></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-dark w-100">Enviar mensaje</button>
+                
+                  <!-- Contenedor para el mensaje de estado -->
+                  <div id="mensaje-estado" class="mt-3 text-center fw-semibold"></div>
+                </form>
+              </div>
   
-        <!-- Columna derecha: Información -->
-        <div class="col-md-6 d-flex flex-column justify-content-center px-4">
-          <h4 class="fw-bold mb-3">Información de contacto</h4>
-          <p><strong>Email:</strong> jhonierstivenmontanocastillo@gmail.com</p>
-          <p><strong>Ubicación:</strong> Colombia</p>
-          <p><strong>Disponibilidad:</strong> Tiempo completo</p>
-          <div class="d-flex gap-3 mt-3">
-            <a href="https://github.com/Jhonier1227" target="_blank"><i class="fab fa-github fa-2x text-dark"></i></a>
-            <a href="https://www.linkedin.com/in/jhonier-stiven-monta%C3%B1o-castillo-610271346/" target="_blank"><i class="fab fa-linkedin fa-2x text-primary"></i></a>
-            <!-- Agrega otros íconos si los necesitas -->
+              <!-- Información -->
+              <div class="col-md-6 d-flex flex-column justify-content-center px-3">
+                <div class="text-center mb-3">
+                  <img src="/images/LogoJH.png" alt="Contacto" class="img-fluid rounded-circle" style="width: 120px; height: 120px; object-fit: cover; box-shadow: 0 0 10px rgba(0,0,0,0.3);">
+                </div>
+                <h4 class="fw-bold mb-3">Información de contacto</h4>
+                <p><strong>Email:</strong> 
+                  <a href="mailto:jhonierstivenmontanocastillo@gmail.com" class="text-dark text-decoration-underline">
+                    jhonierstivenmontanocastillo@gmail.com
+                  </a>
+                </p>
+                <p><strong>Teléfono:</strong> <a href="tel:+573053123456" class="text-dark text-decoration-underline">+57 317 052 5370</a></p>                
+                <p><strong>Ubicación:</strong> Colombia</p>
+                <p><strong>Disponibilidad:</strong> Tiempo completo</p>
+                <div class="d-flex gap-3 mt-3">
+                  <a href="https://github.com/Jhonier1227" target="_blank"><i class="fab fa-github fa-2x text-dark"></i></a>
+                  <a href="https://www.linkedin.com/in/jhonier-stiven-monta%C3%B1o-castillo-610271346/" target="_blank"><i class="fab fa-linkedin fa-2x text-primary"></i></a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
+  
+    <!-- Fondo animado -->
+    <div class="position-absolute top-0 start-0 w-100 h-100" style="background: radial-gradient(circle at 20% 40%, rgba(255,255,255,0.05), transparent 25%), radial-gradient(circle at 80% 60%, rgba(255,255,255,0.05), transparent 25%); z-index: 1;"></div>
   </section>
+  
   
   
 
@@ -297,6 +370,8 @@
       <p class="mb-0 small">&copy; 2025 Jhonier Stiven Montaño Castillo. Todos los derechos reservados.</p>
     </div>
   </footer>
+
+  <button id="btn-top"></button>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="/scripts.js"></script>
 </body>
