--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Portafolio personal de Jhonier Montaño, desarrollador web. Aquí encontrarás información sobre mí, mis proyectos y habilidades.">
   <meta name="keywords" content="Jhonier Montaño, portafolio, desarrollador web, proyectos, habilidades">
   <!-- Icono de la pestaña-->
-  <link rel="icon" href="images/LogoSolo.png" type="image/png">
+  <link rel="icon" href="assets/images/LogoSolo.png" type="image/png">
 
   <!-- Fuente moderna -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -102,7 +102,7 @@
     <div class="row align-items-center">
       <!-- Imagen -->
       <div class="col-md-5 mb-4 mb-md-0 text-center" data-aos="fade-right">
-        <img src="/assets/images/yo" alt="Foto de Jhonier Montaño" class="img-fluid rounded-circle shadow" style="max-width: 250px; border: 4px solid #fff;">
+        <img src="/assets/images/FotoPersonal.jpg" alt="Foto de Jhonier Montaño" class="img-fluid rounded-circle shadow" style="max-width: 250px; border: 4px solid #fff;">
       </div>
 
       <!-- Texto -->
@@ -147,8 +147,9 @@
           <div class="d-flex gap-2 flex-wrap">
             <span class="badge bg-danger">HTML</span>
             <span class="badge bg-primary">CSS</span>
-            <span class="badge bg-success">JavaScript</span>
-            <span class="badge bg-dark">Bootstrap</span>
+            <span class="badge" style="background-color: #f7df1e; color: #000;">JavaScript</span>
+            <span class="badge" style="background-color: #6f42c1; color: #fff;">Bootstrap</span>
+            
           </div>
         </div>
         <a href="https://github.com/Jhonier1227/MCgruas" target="_blank" class="btn btn-outline-light mt-2 w-100">
