--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Íconos FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- CSS personalizado -->
-  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="assets/style.css">
   <!-- AOS -->
  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -136,7 +136,7 @@
     <!-- Proyecto 1 -->
     <div class="card proyecto-card flex-shrink-0 shadow-lg rounded-4 d-flex flex-row" style="min-width: 600px; max-width: 700px; height: 250px; background: #1c1c1c; color: #fff;">
       <!-- Imagen lateral -->
-      <img src="assets/imgPro/LogoGrua1.png" class="img-fluid rounded-start" alt="Miniatura M&C Grúas" style="width: 40%; object-fit: cover;">
+      <img src="assets/imgProyectos/LogoGrua1.png" class="img-fluid rounded-start" alt="Miniatura M&C Grúas" style="width: 40%; object-fit: cover;">
     
       <!-- Contenido -->
       <div class="card-body d-flex flex-column justify-content-between p-3">
@@ -374,6 +374,6 @@
 
   <button id="btn-top"></button>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="/assets/scripts.js"></script>
+  <script src="assets/scripts.js"></script>
 </body>
 </html>
