--- a/index.html
+++ b/index.html
@@ -222,90 +222,106 @@
 
 
   <!-- CONTACTO -->
-  <section id="contacto" class="py-5 position-relative" style="background: linear-gradient(to right, #0f0f0f, #1c1c1c); overflow: hidden;">
-    <div class="container position-relative" style="z-index: 2;">
-      <h2 class="text-center mb-4 section-title text-white">Contacto</h2>
-      <p class="text-center text-white-50 mb-5">¿Tienes un proyecto, idea o simplemente quieres saludar? ¡Estoy disponible para colaborar!</p>
-  
-      <div class="row justify-content-center">
-        <div class="col-lg-8">
-          <div class="bg-white rounded-4 shadow-lg p-4 p-md-5 animate__animated animate__fadeInUp">
-            <div class="row">
-              <!-- Formulario -->
-              <div class="col-md-6 mb-4 mb-md-0">
-                <form id="formulario-contacto" action="https://formspree.io/f/mrbqqdya" method="POST">
-                  <div class="mb-3">
-                    <label for="nombre" class="form-label">Nombre completo</label>
-                    <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Tu nombre" required>
-                  </div>
-                  <div class="mb-3">
-                    <label for="correo" class="form-label">Correo electrónico</label>
-                    <input type="email" class="form-control" id="correo" name="correo" placeholder="tucorreo@example.com" required>
-                  </div>
-                  <div class="mb-3">
-                    <label for="asunto" class="form-label">Asunto</label>
-                    <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Motivo del mensaje" required>
-                  </div>
-                  <div class="mb-3">
-                    <label for="mensaje" class="form-label">Mensaje</label>
-                    <textarea class="form-control" id="mensaje" name="mensaje" rows="5" placeholder="Escribe tu mensaje aquí..." required></textarea>
-                  </div>
-                  <button type="submit" class="btn btn-dark w-100">Enviar mensaje</button>
-                
-                  <!-- Contenedor para el mensaje de estado -->
-                  <div id="mensaje-estado" class="mt-3 text-center fw-semibold"></div>
-                </form>
+<section id="contacto" class="py-5 position-relative" style="background: linear-gradient(to right, #0f0f0f, #1c1c1c); overflow: hidden;">
+  <div class="container position-relative" style="z-index: 2;">
+    <h2 class="text-center mb-4 section-title text-white">Contacto</h2>
+    <p class="text-center text-white-50 mb-5">¿Tienes un proyecto, idea o simplemente quieres saludar? ¡Estoy disponible para colaborar!</p>
+
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
+        <div class="bg-white rounded-4 shadow-lg p-4 p-md-5 animate__animated animate__fadeInUp">
+          <div class="row">
+            <!-- Formulario -->
+            <div class="col-md-6 mb-4 mb-md-0">
+              <form id="formulario-contacto" action="https://formspree.io/f/mrbqqdya" method="POST">
+                <div class="mb-3">
+                  <label for="nombre" class="form-label">Nombre completo</label>
+                  <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Tu nombre" required>
+                </div>
+                <div class="mb-3">
+                  <label for="correo" class="form-label">Correo electrónico</label>
+                  <input type="email" class="form-control" id="correo" name="correo" placeholder="tucorreo@example.com" required>
+                </div>
+                <div class="mb-3">
+                  <label for="asunto" class="form-label">Asunto</label>
+                  <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Motivo del mensaje" required>
+                </div>
+                <div class="mb-3">
+                  <label for="mensaje" class="form-label">Mensaje</label>
+                  <textarea class="form-control" id="mensaje" name="mensaje" rows="5" placeholder="Escribe tu mensaje aquí..." required></textarea>
+                </div>
+                <button type="submit" class="btn btn-dark w-100">
+                  Enviar mensaje
+                  <span id="spinner" class="spinner-border spinner-border-sm d-none ms-2" role="status" aria-hidden="true"></span>
+                </button>
+
+                <div id="mensaje-estado" class="mt-3 text-center fw-semibold"></div>
+              </form>
+            </div>
+
+            <!-- Información -->
+            <div class="col-md-6 d-flex flex-column justify-content-center px-3">
+              <div class="text-center mb-3">
+                <img src="assets/images/LogoJH.png" alt="Contacto" class="img-fluid rounded-circle" style="width: 120px; height: 120px; object-fit: cover; box-shadow: 0 0 10px rgba(0,0,0,0.3);">
               </div>
-  
-              <!-- Información -->
-              <div class="col-md-6 d-flex flex-column justify-content-center px-3">
-                <div class="text-center mb-3">
-                  <img src="assets/images/LogoJH.png" alt="Contacto" class="img-fluid rounded-circle" style="width: 120px; height: 120px; object-fit: cover; box-shadow: 0 0 10px rgba(0,0,0,0.3);">
-                </div>
-                <h4 class="fw-bold mb-3">Información de contacto</h4>
-                <p><strong>Email:</strong> 
-                  <a href="mailto:jhonierstivenmontanocastillo@gmail.com" class="text-dark text-decoration-underline">
-                    jhonierstivenmontanocastillo@gmail.com
-                  </a>
-                </p>
-                <p><strong>Teléfono:</strong> <a href="tel:+573170525370" class="text-dark text-decoration-underline">+57 317 052 5370</a></p>                
-                <p><strong>Ubicación:</strong> Colombia</p>
-                <p><strong>Disponibilidad:</strong> Tiempo completo</p>
-                <div class="d-flex gap-3 mt-3">
-                  <a href="https://github.com/Jhonier1227" target="_blank"><i class="fab fa-github fa-2x text-dark"></i></a>
-                  <a href="https://www.linkedin.com/in/jhonier-stiven-monta%C3%B1o-castillo-610271346/" target="_blank"><i class="fab fa-linkedin fa-2x text-primary"></i></a>
-                </div>
+              <h4 class="fw-bold mb-3">Información de contacto</h4>
+              <p><strong>Email:</strong> 
+                <a href="mailto:jhonierstivenmontanocastillo@gmail.com" class="text-dark text-decoration-underline" target="_blank">
+                  jhonierstivenmontanocastillo@gmail.com
+                </a>
+              </p>
+              <p><strong>Teléfono:</strong> 
+                <a href="tel:+573170525370" class="text-dark text-decoration-underline" target="_blank">+57 317 052 5370</a>
+              </p>
+              <p><strong>Ubicación:</strong> Colombia</p>
+              <p><strong>Disponibilidad:</strong> Tiempo completo</p>
+              <div class="d-flex gap-3 mt-3">
+                <a href="https://github.com/Jhonier1227" target="_blank"><i class="fab fa-github fa-2x text-dark"></i></a>
+                <a href="https://www.linkedin.com/in/jhonier-stiven-monta%C3%B1o-castillo-610271346/" target="_blank"><i class="fab fa-linkedin fa-2x text-primary"></i></a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  
-    <!-- Fondo animado -->
-    <div class="position-absolute top-0 start-0 w-100 h-100" style="background: radial-gradient(circle at 20% 40%, rgba(255,255,255,0.05), transparent 25%), radial-gradient(circle at 80% 60%, rgba(255,255,255,0.05), transparent 25%); z-index: 1;"></div>
-  </section>
-  
+  </div>
+
+  <!-- Fondo animado -->
+  <div class="position-absolute top-0 start-0 w-100 h-100" style="background: radial-gradient(circle at 20% 40%, rgba(255,255,255,0.05), transparent 25%), radial-gradient(circle at 80% 60%, rgba(255,255,255,0.05), transparent 25%); z-index: 1;"></div>
+</section>
+
   
   
 
   <!-- FOOTER -->
-  <footer class="bg-dark text-white py-4">
-    <div class="container text-center">
-      <div class="mb-3">
-        <a href="#inicio" class="text-white mx-2 text-decoration-none">Inicio</a>
-        <a href="#sobre-mi" class="text-white mx-2 text-decoration-none">Sobre mí</a>
-        <a href="#proyectos" class="text-white mx-2 text-decoration-none">Proyectos</a>
-        <a href="#habilidades" class="text-white mx-2 text-decoration-none">Habilidades</a>
-        <a href="#contacto" class="text-white mx-2 text-decoration-none">Contacto</a>
-      </div>
-      <div class="mb-2">
-        <a href="https://github.com/Jhonier1227" target="_blank" class="text-white mx-2"><i class="fab fa-github fa-lg"></i></a>
-        <a href="https://www.linkedin.com/in/jhonier-stiven-monta%C3%B1o-castillo-610271346/" target="_blank" class="text-white mx-2"><i class="fab fa-linkedin fa-lg"></i></a>
-      </div>
-      <p class="mb-0 small">&copy; 2025 Jhonier Stiven Montaño Castillo. Todos los derechos reservados.</p>
+ <footer class="bg-dark text-white py-4 mt-auto border-top border-secondary">
+  <div class="container text-center">
+    <!-- Navegación -->
+    <div class="mb-3 d-flex flex-wrap justify-content-center gap-3">
+      <a href="#inicio" class="text-white text-decoration-none">Inicio</a>
+      <a href="#sobre-mi" class="text-white text-decoration-none">Sobre mí</a>
+      <a href="#proyectos" class="text-white text-decoration-none">Proyectos</a>
+      <a href="#habilidades" class="text-white text-decoration-none">Habilidades</a>
+      <a href="#contacto" class="text-white text-decoration-none">Contacto</a>
     </div>
-  </footer>
+
+    <!-- Iconos sociales -->
+    <div class="mb-3">
+      <a href="https://github.com/Jhonier1227" target="_blank" class="text-white mx-2">
+        <i class="fab fa-github fa-lg"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/jhonier-stiven-monta%C3%B1o-castillo-610271346/" target="_blank" class="text-white mx-2">
+        <i class="fab fa-linkedin fa-lg"></i>
+      </a>
+    </div>
+
+    <!-- Créditos -->
+    <p class="mb-0 small text-white-50">
+      &copy; 2025 <strong>Jhonier Stiven Montaño Castillo</strong>. Todos los derechos reservados.
+    </p>
+  </div>
+</footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="assets/scripts.js"></script>
