implemenmente otro proyecto

--- a/index.html
+++ b/index.html
@@ -141,38 +141,69 @@
   <div class="proyectos-carrusel d-flex gap-4 overflow-x-auto overflow-y-hidden px-3 py-4" style="scrollbar-width: thin;">
 
     <!-- Proyecto 1 -->
-    <div class="card proyecto-card flex-shrink-0 shadow-lg rounded-4 d-flex flex-row" style="min-width: 600px; max-width: 700px; height: 250px; background: #1c1c1c; color: #fff;">
-      
-      <!-- Imagen lateral -->
-      <img src="assets/imgProyectos/LogoGrua1.png" class="img-fluid rounded-start" alt="Miniatura M&C Grúas" style="width: 40%; object-fit: cover;">
+          <div class="card proyecto-card flex-shrink-0 shadow-lg rounded-4 d-flex flex-row" style="min-width: 600px; max-width: 700px; height: 250px; background: #1c1c1c; color: #fff;">
+            
+            <!-- Imagen lateral -->
+            <img src="assets/imgProyectos/LogoGrua1.png" class="img-fluid rounded-start" alt="Miniatura M&C Grúas" style="width: 40%; object-fit: cover;">
 
-      <!-- Contenido -->
-      <div class="card-body d-flex flex-column justify-content-between p-3 w-100">
-        <div>
-          <h5 class="card-title fw-bold">M&C Grúas</h5>
-          <p class="card-text mb-2">Sitio web profesional para empresa de transporte y grúas. Desarrollado con HTML, CSS, JavaScript y Bootstrap.</p>
-          <p class="mb-1"><strong>Tecnologías:</strong></p>
-          <div class="d-flex gap-2 flex-wrap mb-3">
-            <span class="badge bg-danger">HTML</span>
-            <span class="badge bg-primary">CSS</span>
-            <span class="badge" style="background-color: #f7df1e; color: #000;">JavaScript</span>
-            <span class="badge" style="background-color: #6f42c1; color: #fff;">Bootstrap</span>
+            <!-- Contenido -->
+            <div class="card-body d-flex flex-column justify-content-between p-3 w-100">
+              <div>
+                <h5 class="card-title fw-bold">M&C Grúas</h5>
+                <p class="card-text mb-2">Sitio web profesional para empresa de transporte y grúas. Desarrollado con HTML, CSS, JavaScript y Bootstrap.</p>
+                <p class="mb-1"><strong>Tecnologías:</strong></p>
+                <div class="d-flex gap-2 flex-wrap mb-3">
+                  <span class="badge bg-danger">HTML</span>
+                  <span class="badge bg-primary">CSS</span>
+                  <span class="badge" style="background-color: #f7df1e; color: #000;">JavaScript</span>
+                  <span class="badge" style="background-color: #6f42c1; color: #fff;">Bootstrap</span>
+                </div>
+              </div>
+
+              <!-- Botones con distribución horizontal en pantallas grandes -->
+              <div class="d-flex flex-column flex-md-row gap-2">
+                <a href="https://github.com/Jhonier1227/MCgruas" target="_blank" class="btn btn-outline-light w-100">
+                  <i class="fab fa-github"></i> GitHub
+                </a>
+                <a href="https://jhonier1227.github.io/MCgruas/" ttarget="_blank" rel="noopener" class="btn btn-outline-danger w-100">
+                  <i class="fas fa-external-link-alt"></i> Ver en vivo
+                </a>
+
+              </div>
+            </div>
           </div>
-        </div>
 
-        <!-- Botones con distribución horizontal en pantallas grandes -->
-        <div class="d-flex flex-column flex-md-row gap-2">
-          <a href="https://github.com/Jhonier1227/MCgruas" target="_blank" class="btn btn-outline-light w-100">
-            <i class="fab fa-github"></i> GitHub
-          </a>
-          <a href="https://jhonier1227.github.io/MCgruas/" ttarget="_blank" rel="noopener" class="btn btn-outline-danger w-100">
-            <i class="fas fa-external-link-alt"></i> Ver en vivo
-          </a>
+    <!-- Proyecto 2 -->
+          <div class="card proyecto-card flex-shrink-0 shadow-lg rounded-4 d-flex flex-row" style="min-width: 600px; max-width: 700px; height: 250px; background: #1c1c1c; color: #fff;">
+            <!-- Imagen lateral -->
+            <img src="assets/imgProyectos/LogodeDragon_Ball_History_.png" class="img-fluid rounded-start" alt="Miniatura Dragon Ball History" style="width: 40%; object-fit: cover;">
 
-        </div>
-      </div>
-    </div>
+            <!-- Contenido -->
+            <div class="card-body d-flex flex-column justify-content-between p-3 w-100">
+              <div>
+                <h5 class="card-title fw-bold">Dragon ball History</h5>
+                <p class="card-text mb-2">Sitio web dedicado a la historia de Dragon Ball. Desarrollado con HTML, CSS, JavaScript y Bootstrap.</p>
+                <p class="mb-1"><strong>Tecnologías:</strong></p>
+                <div class="d-flex gap-2 flex-wrap mb-3">
+                  <span class="badge bg-danger">HTML</span>
+                  <span class="badge bg-primary">CSS</span>
+                  <span class="badge" style="background-color: #f7df1e; color: #000;">JavaScript</span>
+                  <span class="badge" style="background-color: #6f42c1; color: #fff;">Bootstrap</span>
+                </div>
+              </div>
 
+              <!-- Botones con distribución horizontal en pantallas grandes -->
+              <div class="d-flex flex-column flex-md-row gap-2">
+                <a href="https://github.com/Jhonier1227/Dragon_Ball_History" target="_blank" class="btn btn-outline-light w-100">
+                  <i class="fab fa-github"></i> GitHub
+                </a>
+                <a href="https://jhonier1227.github.io/Dragon_Ball_History/" target="_blank" rel="noopener" class="btn btn-outline-danger w-100">
+                  <i class="fas fa-external-link-alt"></i> Ver en vivo
+                </a>
+
+              </div>
+            </div>
+          </div>
     <!-- Puedes duplicar más tarjetas aquí -->
 
   </div>
